<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <View
        android:id="@+id/horizontal_divider"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_centerVertical="true" />

    <LinearLayout
        android:id="@+id/headerlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/horizontal_divider"
        android:background="@drawable/background_header"
        android:backgroundTint="@color/black_tint"
        android:backgroundTintMode="src_over"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@android:color/transparent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingTop="35dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:shadowColor="@color/yellow"
            android:shadowDx="0.0"
            android:shadowDy="0.0"
            android:shadowRadius="50"
            android:text="@string/daj_si_skusi"
            android:textColor="#FFF9E9"
            android:textStyle="bold"
            android:textSize="25sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/yellow" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:paddingEnd="20dp"
            android:text="@string/art_tropik_w_na_sterydach_2_0"
            android:textColor="@color/white"

            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:text="@string/_150g"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/BtnTropic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/yellow"
            android:text="@string/_32_pln"
            android:textSize="17sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/aboutuslayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/horizontal_divider"
        android:background="@drawable/background_aboutus"
        android:orientation="vertical"
        android:backgroundTint="@color/black_tint"
        android:backgroundTintMode="src_over">

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@android:color/transparent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/dowiedz_si_wi_cej"
            android:textColor="@color/dark_yellow"
            android:textSize="23sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/o_naszej_restauracji"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="23sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="10dp"
            android:text="@string/trojka_przyjaciol"
            android:textColor="@color/white"
            android:textSize="15sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="5dp"
            android:text="@string/przepis"
            android:textColor="@color/white"
            android:textSize="15sp"/>
        <Button
            android:id="@+id/Btnlearnmore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/yellow"
            android:text="@string/przejd_do_menu"
            android:textSize="17sp" />



    </LinearLayout>


</RelativeLayout>